Proper model extension structure for plugin

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 base
 om
 map
+lib/model/ncChangeLogEntryQuery.php
 test/functional/fixtures/data/sql
 test/functional/fixtures/lib/model
 test/functional/fixtures/plugins
