--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,7 @@ map
 lib/model/ncChangeLogEntryQuery.php
 test/functional/fixtures/data/sql
 test/functional/fixtures/data/database.sqlite
-test/functional/fixtures/lib/model
+#test/functional/fixtures/lib/model
 test/functional/fixtures/plugins
 test/functional/fixtures/log
 test/functional/fixtures/cache
