Started work on the actual behavior
Removed ncChangeLogEntryQueue, it was a slow and needless implementation of something, that should've just been a property of the host object :-/

Added sfPropel15Plugin submodule, for testing in systems that use it (ie, mine ;))

Updated the ncChangeLogEntryPeer to with code that was improperly placed in the Behavior class

Added a constructor to the ncChangeLogEntry object to allow for easy host object insertion.

Other small improvements and additions to the phpDoc

--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,6 @@ map
 lib/model/ncChangeLogEntryQuery.php
 test/functional/fixtures/data/sql
 test/functional/fixtures/data/database.sqlite
-#test/functional/fixtures/lib/model
-test/functional/fixtures/plugins
+test/functional/fixtures/plugins/nc*
 test/functional/fixtures/log
 test/functional/fixtures/cache
