Major update... maybe this is version Alpha 1? All that is left is inclusion of formatter hooks and full testing.
Rewrote the 1N and NN related changelogs methods; They now rely 100% on Propel's introspection API instead of the ncClassFinder (which was removed). However, M:M relations will only work with Propel 1.5 and up.

Other small optimizations and fixes were introduced, and the signature of Behavior::getChangeLog() was changed to have the connection object passed at the end (potentially BC break).

A skeletal test for ncPropelChangeLogBehavior.class.php was added

--- a/.gitignore
+++ b/.gitignore
@@ -6,5 +6,6 @@ lib/model/ncChangeLogEntryQuery.php
 test/functional/fixtures/data/sql
 test/functional/fixtures/data/database.sqlite
 test/functional/fixtures/plugins/nc*
+test/functional/fixtures/lib/model/*Query*
 test/functional/fixtures/log
 test/functional/fixtures/cache
