--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "test/functional/fixtures/plugins/sfPropel15Plugin"]
-	path = test/functional/fixtures/plugins/sfPropel15Plugin
-	url = git@github.com:CraftyShadow/sfPropel15Plugin.git
+[submodule "test/functional/fixtures/plugins/sfPropelORMPlugin"]
+	path = test/functional/fixtures/plugins/sfPropelORMPlugin
+	url = https://github.com/propelorm/sfPropelORMPlugin.git
